--- a/Detector.tex
+++ b/Detector.tex
@@ -29,7 +29,7 @@ with the revolution frequency $f$, the number of particles $n_1$ and $n_2$ conta
 \begin{figure}[!tp]
   \centering
   \begin{tabular}{c}
-    \includegraphics[width=0.55\textwidth]{figures/crosssections2012_v5-1.pdf}
+    \includegraphics[width=0.60\textwidth]{figures/crosssections2012_v5-1.pdf}
   \end{tabular}
   \caption{Summary of cross sections for various standard model processes in proton-proton and proton-antiproton collisions as function of the centre of mass energy. The right axis displays the correponding event rate at a luminosity of $\mathrm{10^{33}\,cm^{-2} s^{-1}}$. Taken from~\cite{bib:stirling:pcom}.}
   \label{fig:CrossSections}
@@ -50,7 +50,7 @@ The CMS detector with its typical cylindrical design of different sub-detector c
   \caption{A perspective view of the CMS detector~\cite{Chatrchyan:2008zzk}.}
   \label{fig:CMS}
 \end{figure}
-As a typical high-energy particle experiment the CMS detector makes mainly use of tracking detectors and calorimeters to measure particles' momenta, energy depositions and flight directions in order to identify the objects emerging from the particle collisions. Table ... \todo{Performance Table} gives an overview of the performance goals of the various sub-detectors. The overall dimension of the CMS detector are a length of 21.6\,m and a diameter of 14.6\,m resulting in a total weight of 12500\,t. \\  
+As a typical high-energy particle experiment the CMS detector makes mainly use of tracking detectors and calorimeters to measure particles' momenta, energy depositions and flight directions in order to identify the objects emerging from the particle collisions. The entire CMS detector with a length of 21.6\,m and a diameter of 14.6\,m results in a total weight of 12500\,t. \\  
 The following sections comprise a description of the CMS detector and individual sub-detector components focusing on the detector parts most relevant for the analyses presented in this thesis. A detailed discussion of the detector design can be found in~\cite{Chatrchyan:2008zzk, bib:cmsptdr1}.
 
 \subsection{Coordinate Conventions and Kinematic Variables}
@@ -90,7 +90,8 @@ In order to fulfill these tasks the CMS experiment makes use of a tracker design
  \item \textbf{Pixel Detector:} The pixel detector consists of three barrel layers which extend from 4.4\,cm to 10.2\,cm and two endcap disks on each side. In total there are 1440 pixel modules installed. The size of one pixel cell is 100 x 150 $\mu m^2$ providing similar track resolution quality in $r-\phi$ and $z$ direction. This configuration provides for almost the whole range up to $|\eta| = 2.5$ three precise tracking hits. This is especially important for the reconstruction of secondary vertices.
  \item \textbf{Silicon Strip Tracker:} The silicon strip detector which extends to a radius of 1.1\,m comprises the pixel tracker. The more than 15000 individual strip detector modules are arranged in an inner and an outer detector part. The inner part of the strip tracker is build by the four Tracker Inner Barrel (TIB) layers which are accompanied by the three Tracker Inner Disks (TID) at the end sides. This inner part provides up to four track measurements in the $r-\phi$ plane. The TIB/TID system lies within the Tracker Outer Barrel (TOB) consisting of another six barrel layers while it is complemented by the Tracker EndCaps (TEC) which add another nine disks at each side of the tracking system. This layout provides at least around nine hits within the silicon strip system. 
 \end{description}
-The tracking system with the desgin described above provides a very good impact parameter resolution and tracking efficiency~\cite{bib:cmstdr:tracker}. The impact parameter resolution is of the order of $<$ 35\,$\mu$m in the plane perpendicular to the beam (for particles with \pt $>$ 10\,GeV) and reaches 75\,$\mu$m in the longitudinal direction. Also the track reconstruction efficiency is expected to show a very good performance. The reconstruction efficiency of high energetic electrons is above 90\%, that of charged hadrons up to 95\% (for \pt $>$ 10\,GeV) and that for muons even better than 98\% in the whole covered region up to $|\eta| = 2.5$ already for muons with very low transverse momenta around 1\,GeV.  
+The tracking system with the desgin described above provides a very good impact parameter resolution and tracking efficiency~\cite{bib:cmstdr:tracker}. The impact parameter resolution is of the order of $<$ 35\,$\mu$m in the plane perpendicular to the beam (for particles with \pt $>$ 10\,GeV) and reaches 75\,$\mu$m in the longitudinal direction. Also the track reconstruction efficiency is expected to show a very good performance. The track reconstruction efficiency of high energetic electrons is above 90\%, that of charged hadrons up to 95\% (for \pt $>$ 10\,GeV) and that for muons even better than 98\% in the whole covered region up to $|\eta| = 2.5$ already for muons with very low transverse momenta around 1\,GeV. Altogether, the relative transverse momentum resolution reaches a level of 1-2\% for high momentum tracks ($\approx$ 100\,GeV) in the central barrel for $|\eta| < 1.6$.
+ 
 
 \subsection{Electromagnetic Calorimeter}
 \label{subsec:cms_ecal}
@@ -109,7 +110,7 @@ An overview of the ECAL layout is shown in Fig.~\ref{fig:CMS_ecal}. The individu
  \item \textbf{Endcap ECAL (EE):} The EB is complemented on each side by an endcap which consists of two d-shaped halfs. The ECAL endcaps extend from $|\eta| = 1.479$ to $|\eta| = 3.0$. In total they contain another 14648 crystals with an individual length of 220\,mm corresponding to 24.7 $\mathrm{X}_0$. For the collection of scintillation light vacuum phototriodes are used in the endcaps.
  \item \textbf{Preshower (ES):} In front of the endcap crystals a preshower detector is placed. It covers the pseudorapidity range of $|\eta| = 1.653 - 2.6$. The main purpose is to identify photons emerging from the decay of neutral pions. It is a two-layer sampling calorimeter with lead as absorber material and silicon strip sensors measuring the deposited energy. The total thickness of the preshower is 20\,cm (3 $\mathrm{X_0}$).
 \end{description}
-In order to achieve a stable and uniform energy measurement across the whole ECAL an accurate calibration is of crucial importance. In addition to the calibration of the absolute energy scale especially channel-to-channel effects -- referred to as intercalibration -- have to be accounted for. This intercalibration is mainly done based on physics events as e.g. $\pi^0 \rightarrow \gamma \gamma$ or $W \rightarrow \e \nu$. Changes in the transparency of the ECAL crystals during operation caused by irradiation are monitored by a dedicated laser system injecting well defined laser pulses into the crystals via optical fibres. 
+In order to achieve a stable and uniform energy measurement across the whole ECAL an accurate calibration is of crucial importance. In addition to the calibration of the absolute energy scale especially channel-to-channel effects -- referred to as intercalibration -- have to be accounted for which is mainly done based on physics events. Changes in the transparency of the ECAL crystals during operation caused by irradiation are monitored by a dedicated laser system based on the injection of reference laser pulses into the crystals. The typical achievable relative energy resolution for 120 GeV electrons with this calorimeter configuration is of the order of 0.5\%.
 
 \subsection{Hadron Calorimeter}
 \label{subsec:cms_hcal}
@@ -131,7 +132,7 @@ Each half barrel is divided into 16 $\eta$-regions for which the individual tile
  \item \textbf{Hadron endcap (HE):} The hadron barrel calorimeter is supplemented by the hadron endcap. It is mounted on the endcap iron yoke and covers the pseudorapidity region of $1.3 \le |\eta| \le 3.0$ using 18 scintillator layers inserted into brass absorber plates. The granularity of the endcap calorimeter is the same as for the barrel up to $|\eta| = 1.6$ and gets coarser for larger pseudorapidities with $(\Delta \eta, \Delta \phi) \approx (0.17, 0.17)$.
  \item \textbf{Hadron forward (HF):} The forward hadron calorimeter extends the pseudorapidity coverage from $|\eta| = 2.9$ (slightly overlapping with the HE) up to $|\eta| = 5.2$. It is located 11.2\,m from the nominal interaction point and has to be in particular radiation hard to cope with the vast particle flux. Thus the HF is made of steel absorber plates with radiation hard quartz fibres integrated as active material. These fibres are arranged parallel to the beam line and form towers with a size in $(\Delta \eta, \Delta \phi)$ of $\approx$ (0.175, 0.175). The signal is detected as Cerenkov light originating from the quartz fibres.
 \end{description}
-Similar to the ECAL also the performance of the HCAL has to be well calibrated and further monitored during operation. Thus an initial calibration using a radioactive source is combined with test beam data to derive the absolute energy scale. A continous update of this calibrations is performed using isolated energetic particles e.g. from decays of W or Z bosons. In order to perform a fast monitoring various techniques like for instance a UV-laser system are exploited.
+Similar to the ECAL also the performance of the HCAL has to be well calibrated and further monitored during operation. Thus an initial calibration using a radioactive source is combined with test beam data to derive the absolute energy scale. A continous update of this calibrations is performed using isolated energetic particles e.g. from decays of W or Z bosons. 
 
 \subsection{Muon System}
 \label{subsec:cms_muon}
@@ -151,7 +152,7 @@ In order to feature a good muon momentum resolution given the different radiatio
  \item \textbf{Cathode strip chambers (CSC):} The endcap regions are equipped with cathode strip chambers and cover the pseudorapidity range $0.9 < |\eta| < 2.4$. These are chosen as they provide a fast response time and fine segmentation while they are resistant against radiation. Thus they are well suited for the forward region where the muon and background rates are largely increased and the magnetic field is high and non-uniform. The CSCs which are multiwire proportional chambers where anode wires are interlaced with cathode panels perform a precise position measurement in the $r\phi$ bending plane with a spatial resolution of 75-150\,$\mu$m. 
  \item \textbf{Resistive plate chambers (RPC):} Resistive plate chambers are used to complement the drift tube and cathode strip chambers in the range $|\eta| < 1.6$. These are gaseous parallel-plate detectors with a spacial resolution coarser than the DTs and CSCs but usable at high particle rates while providing a very fast response and good time resolution. Thus they are able to very efficiently detect the correct bunch-crossing a muon track is associated to. 
 \end{description}
-The global muon reconstruction efficiency is in general about $95-99\%$ and only drops for some $|\eta|$ regions like e.g. in the transition region between the barrel and endcap part around $|\eta|=1.2$. Since muons reaching the muon system are affected by multiple scattering the resolution for muons with low transverse momenta below $\approx$ 200\,GeV is in general better based on the inner tracking system than for the muon system alone. For highly energetic muons it is comparable. In general, the muon momentum resolution can be improved by combining the information from the inner tracker and the muon system due to an improved fault finding.
+The global muon reconstruction efficiency is in general about $95-99\%$ and only drops for some $|\eta|$ regions like e.g. in the transition region between the barrel and endcap part around $|\eta|=1.2$. Since muons reaching the muon system are affected by multiple scattering the resolution for muons with low transverse momenta below $\approx$ 200\,GeV is in general better based on the inner tracking system than for the muon system alone. For highly energetic muons it is comparable. In general, the muon momentum resolution can be improved by combining the information from the inner tracker and the muon system due to an improved fault finding. This combined approach results in a relative muon momentum resolution for muons with high momenta ($\approx$ 1\,TeV) of about 5\%.
 
 \subsection{Trigger System}
 \label{subsec:cms_trigger}
