--- a/Detector.tex
+++ b/Detector.tex
@@ -106,7 +106,7 @@ An overview of the ECAL layout is shown in Fig.~\ref{fig:CMS_ecal}. The individu
   \label{fig:CMS_ecal}
 \end{figure}
 \begin{description}
- \item \textbf{Barrel ECAL (EB):} The barrel detector of the ECAL covers the pseudorapidity region up to $|\eta| = 1.479$. Within a radius of about 1.3\,m a total number of 61200 crystals are installed. Each of them has a length of 230\,mm resulting in a radiation length of 25.8 $\mathrm{X_0}$. Avalanche photodiodes are used to detect the emitted scintillation light.
+ \item \textbf{Barrel ECAL (EB):} The barrel detector of the ECAL covers the pseudorapidity region up to $|\eta| = 1.479$. Within a radius of about 1.3\,m a total number of 61200 crystals are installed. Each of them has a length of 230\,mm resulting in a radiation length of 25.8 $\mathrm{X_0}$. The crystal cross-section in $(\eta, \phi)$ is $(0.0174, 0.0174)$. Avalanche photodiodes are used to detect the emitted scintillation light.
  \item \textbf{Endcap ECAL (EE):} The EB is complemented on each side by an endcap which consists of two d-shaped halfs. The ECAL endcaps extend from $|\eta| = 1.479$ to $|\eta| = 3.0$. In total they contain another 14648 crystals with an individual length of 220\,mm corresponding to 24.7 $\mathrm{X}_0$. For the collection of scintillation light vacuum phototriodes are used in the endcaps.
  \item \textbf{Preshower (ES):} In front of the endcap crystals a preshower detector is placed. It covers the pseudorapidity range of $|\eta| = 1.653 - 2.6$. The main purpose is to identify photons emerging from the decay of neutral pions. It is a two-layer sampling calorimeter with lead as absorber material and silicon strip sensors measuring the deposited energy. The total thickness of the preshower is 20\,cm (3 $\mathrm{X_0}$).
 \end{description}
@@ -152,10 +152,16 @@ In order to feature a good muon momentum resolution given the different radiatio
  \item \textbf{Cathode strip chambers (CSC):} The endcap regions are equipped with cathode strip chambers and cover the pseudorapidity range $0.9 < |\eta| < 2.4$. These are chosen as they provide a fast response time and fine segmentation while they are resistant against radiation. Thus they are well suited for the forward region where the muon and background rates are largely increased and the magnetic field is high and non-uniform. The CSCs which are multiwire proportional chambers where anode wires are interlaced with cathode panels perform a precise position measurement in the $r\phi$ bending plane with a spatial resolution of 75-150\,$\mu$m. 
  \item \textbf{Resistive plate chambers (RPC):} Resistive plate chambers are used to complement the drift tube and cathode strip chambers in the range $|\eta| < 1.6$. These are gaseous parallel-plate detectors with a spacial resolution coarser than the DTs and CSCs but usable at high particle rates while providing a very fast response and good time resolution. Thus they are able to very efficiently detect the correct bunch-crossing a muon track is associated to. 
 \end{description}
-The global muon reconstruction efficiency is in general about $95-99\%$ and only drops for some $|\eta|$ regions like e.g. in the transition region between the barrel and endcap part around $|\eta|=1.2$. Since muons reaching the muon system are affected by multiple scattering the resolution for muons with low transverse momenta below $\approx$ 200\,GeV is in general better based on the inner tracking system than for the muon system alone. For highly energetic muons it is comparable. In general, the muon momentum resolution can be improved by combining the information from the inner tracker and the muon system due to an improved fault finding. This combined approach results in a relative muon momentum resolution for muons with high momenta ($\approx$ 1\,TeV) of about 5\%.
+The global muon reconstruction efficiency is in general about $95-99\%$ and only drops for some $|\eta|$ regions like e.g. in the transition region between the barrel and endcap part around $|\eta|=1.2$. Since muons reaching the muon system are affected by multiple scattering the resolution for muons with low transverse momenta below $\approx$ 200\,GeV is in general better based on the inner tracking system than for the muon system alone. For highly energetic muons it is comparable. In general, the muon momentum resolution can be improved by combining the information from the inner tracker and the muon system due to an improved fault finding. This combined approach results in a relative muon momentum resolution for muons with high momenta around 1\,TeV of about 5\%.
 
 \subsection{Trigger System}
 \label{subsec:cms_trigger}
+The LHC operating at design conditions provides particle collisions with an interaction rate of 40\,MHz. This results in an enormous amount of data events which have to be processed and stored for later offline analyses. With an approximate event size of 1 MB it is technically impossible to record all such events. However, as illustrated in Fig.~\ref{fig:CrossSections} the event rate of interesting potentially new physics events is orders of magnitudes smaller than the proton-proton cross section. Thus, this allows to already perform online a suitable event preselection in order to reduce the amount of data to a storable size still containing the information of interest. Hence, the trigger system also makes up the first step in the physics analysis process.\\
+In order to achieve the necessary rate reduction, the CMS experiment makes use of a two-stage trigger system. This is described in the following.
+\begin{description}
+\item \textbf{Level-1 (L1) Trigger:} The L1 Trigger consists of custom-made fast programmable hardware. It makes use of data received from fast detector components -- namely the calorimeters and the muon system -- at reduced granularity. For instance at L1 the calorimeter is divided into so-called \textit{trigger towers} which cover an area in $(\eta, \phi)$ of $(0.087, 0.087)$ up to $|\eta| = 1.74$ and get even coarser for higher $|\eta|$. At L1 the trigger decision is based on energy deposits in those trigger towers or certain hit patterns in the muon chambers forming trigger primitive objects as electrons/photons, muons or jets and global quantities like sums of \et or \met. Events are accepted, if these trigger objects pass some predefined criteria like certain \pt thresholds. The L1 trigger latency between the actual bunch crossing and the delivery of the L1 trigger decision to the front-end electronics is 3.2\,$\mu s$. During this period the high resolution data is pipelined in readout buffers for further processing. Following this procedure the L1 trigger reduces the event rate to 100\,kHz.
+\item \textbf{High-Level Trigger (HLT):} Events that are accepted by the L1 are transferred to the High-Level trigger for further processing. The HLT is a software system running on several thousand commercial processors. It has access to the full information from all sub-detectors and performs an event reconstruction close to the later offline reconstruction. Thus it allows a further rate reduction to the final output rate of a few hundred Hz. Since the HLT is software based, it allows to continously adjust the used algorithms in order to perfectly meet changing conditions during operation.
+\end{description}
 
 \section{Data Taking and Event Simulation}
 \label{sec:data}
