--- a/Detector.tex
+++ b/Detector.tex
@@ -160,7 +160,7 @@ The LHC operating at design conditions provides particle collisions with an inte
 In order to achieve the necessary rate reduction, the CMS experiment makes use of a two-stage trigger system. This is described in the following.
 \begin{description}
 \item \textbf{Level-1 (L1) Trigger:} The L1 Trigger consists of custom-made fast programmable hardware. It makes use of data received from fast detector components -- namely the calorimeters and the muon system -- at reduced granularity. For instance at L1 the calorimeter is divided into so-called \textit{trigger towers} which cover an area in $(\eta, \phi)$ of $(0.087, 0.087)$ up to $|\eta| = 1.74$ and get even coarser for higher $|\eta|$. At L1 the trigger decision is based on energy deposits in those trigger towers or certain hit patterns in the muon chambers forming trigger primitive objects as electrons/photons, muons or jets and global quantities like sums of \et or \met. Events are accepted, if these trigger objects pass some predefined criteria like certain \pt thresholds. The L1 trigger latency between the actual bunch crossing and the delivery of the L1 trigger decision to the front-end electronics is 3.2\,$\mu s$. During this period the high resolution data is pipelined in readout buffers for further processing. Following this procedure the L1 trigger reduces the event rate to 100\,kHz.
-\item \textbf{High-Level Trigger (HLT):} Events that are accepted by the L1 are transferred to the High-Level trigger for further processing. The HLT is a software system running on several thousand commercial processors. It has access to the full information from all sub-detectors and performs an event reconstruction close to the later offline reconstruction. Thus it allows a further rate reduction to the final output rate of a few hundred Hz. Since the HLT is software based, it allows to continously adjust the used algorithms in order to perfectly meet changing conditions during operation.
+\item \textbf{High-Level Trigger (HLT):} Events that are accepted by the L1 are transferred to the High-Level trigger for further processing. The HLT is a software system running on several thousand commercial processors. It has access to the full information from all sub-detectors and performs an event reconstruction similar to the later offline reconstruction. Thus it allows a further rate reduction to the final output rate of a few hundred Hz of events that are finally stored for analyses. Since the HLT is software based, it allows to continously adjust the used algorithms in order to perfectly meet changing conditions during operation.
 \end{description}
 
 \section{Data Taking and Event Simulation}
