--- a/Thesis.tex
+++ b/Thesis.tex
@@ -110,7 +110,7 @@ a4paper
       \vskip2cm
       \begin{large}
         vorgelegt von\\
-        {\bf Dipl.- Phys. Kristin Goebel geb. Heine}\\
+        {\bf Kristin Goebel geb. Heine}\\
         aus Gifhorn
         \vfill
         \noindent{Hamburg\\2014}
