--- a/Conclusions.tex
+++ b/Conclusions.tex
@@ -1,1 +1,6 @@
-bla
+\begin{itemize}
+\item jet resolution has been measured in data and simulation for derivation of data-to-simulation ratio, obtained numbers are ...
+\item it has been searched for susy at sqrt(s) 8 tev, QCD background could be well estimated with typical precision of ... after adjusting the existing method to be able to also predict number of jets correctly
+\item natural susy: requires light stops, limits already quite high. Light means lighter than approx. 1 TeV. close this gap by search involving techniques for identification of boosted tops
+\item everything will be interesting at 13 tev...tada
+\end{itemize}
