--- a/Theory.tex
+++ b/Theory.tex
@@ -7,7 +7,19 @@
 \section{Supersymmetry}
 \label{sec:susy}
 
+\begin{itemize}
+\item general concept
+\item particle content mssm
+\item cmssm
+\item simplified models
+\end{itemize}
+
+
 \subsection{Searches for Supersymmetry at Collider Experiments}
 \label{subsec:susy_status}
 
-
+\begin{itemize}
+\item how do we search at colliders?
+\item status: light squarks + gluinos
+\item status: stop quarks
+\end{itemize}
