--- a/Kurzfassung.tex
+++ b/Kurzfassung.tex
@@ -1,2 +1,4 @@
 \section*{Kurzfassung}
-bla
+Die Suche nach Hinweisen auf Prozesse von neuer Physik jenseits des Standardmodells der Teilchenphysik ist eines der Hauptziele des CMS Experiments am CERN Large Hadron Collider. Da zahlreiche Theorien wie beispielsweise Supersymmetrie die Produktion von neuen farbgeladenen Teilchen, welche als experimentelle Signatur Jets aufweisen, beinhalten, ist es wichtig ein gutes Verst\"andnis dieser Objekte zu erlangen um derartige Suchen zu ermoeglichen.\\
+Im ersten Teil dieser Arbeit wird eine Messung der Jet-Transversalimpuls-Aufl\"osung vorgestellt, welche auf der Analyse von Proton-Proton-Kollisionsdaten basiert, die bei einer Schwerpunktsenergie von 8~\tev vom CMS Experiment aufgezeichnet wurden. Die Messung nutzt dabei die Transversalimpulsbalance von Zweijet-Ereignissen auf Teilchenniveau. Der Fokus liegt dabei auf der Bestimmung des Verh\"altnisses der Aufl\"osung in Daten zu der Aufl\"osung in simulierten Ereignissen, welches verwendet werden kann um Skalierungsfaktoren zu bestimmen, welche die in simulierten Ereignissen gemessene Aufl\"osung an die in Daten beobachtete anpassen.\\
+Der zweite Teil der Arbeit konzentriert sich auf Suchen nach Supersymmetrie in Endzust\"anden mit Jets und fehelndem Transversalimpuls. Zun\"achst wird eine Suche unter Verwendung von bei einer Schwerpunktsenergie von $\sqrt{s}=8$~\tev aufgezeichneten Kollisionsdaten durchgef\"uhrt, die auf Signaturen abzielt, welche haupts\"achlich sensitiv sind auf die Produktion von leichten Squarks und Gluinos sowie die Produktion von gluinoindizierten Teilchen der dritten Generation. Der Schwerpunkt liegt hier auf der Absch\"atzung des Untergrundbeitrags durch QCD Mulijet Ereignisse. Als zweites wird eine Studie vorgestellt, welche auf simulierten Ereignissen bei einer Schwerpunktsenergie von 13~\tev basiert und unterschiedliche Analysestrategien zur Identifikation von direkt produzierten Top Squarks untersucht. Unter Verwendung von Algorithmen zur Identifikation von geboosteten hadronisch zerfallenden Top Quarks aus den Zerf\"allen von Top Squarks, kann eine Sensitivit\"at der Suche f\"ur Top Squarks Massen bis 1~\tev f\"ur LSP Massen bis circa 200~\gev erwartet werden.   
