--- a/Detector.tex
+++ b/Detector.tex
@@ -163,5 +163,8 @@ In order to achieve the necessary rate reduction, the CMS experiment makes use o
 \item \textbf{High-Level Trigger (HLT):} Events that are accepted by the L1 are transferred to the High-Level trigger for further processing. The HLT is a software system running on several thousand commercial processors. It has access to the full information from all sub-detectors and performs an event reconstruction similar to the later offline reconstruction. Thus it allows a further rate reduction to the final output rate of a few hundred Hz of events that are finally stored for analyses. Since the HLT is software based, it allows to continously adjust the used algorithms in order to perfectly meet changing conditions during operation.
 \end{description}
 
-\section{Data Taking and Event Simulation}
+\section{LHC Data Taking}
 \label{sec:data}
+
+\section{Event Simulation}
+\label{sec:simulation}
