--- a/RA2.tex
+++ b/RA2.tex
@@ -46,4 +46,34 @@
 \section{Results and Interpretation}
 \label{sec:RA2_results}
 
+\subsection{Comparison to Other Measurements}
+\label{subsec:RA2_comp}
+
+\begin{figure}[!tp]
+  \centering
+  \begin{tabular}{c}
+    \includegraphics[width=0.9\textwidth]{figures/T1_ICHEP2014_All.png}
+  \end{tabular}
+  \caption{Comparison of various exclusion limits derived by different CMS anlayses for the SMS T1qqqq. Taken from ... (cms susy public results).}
+  \label{fig:T1_comp}
+\end{figure}
+
+\begin{figure}[!tp]
+  \centering
+  \begin{tabular}{c}
+    \includegraphics[width=0.9\textwidth]{figures/T2_ICHEP2014.png}
+  \end{tabular}
+  \caption{Comparison of various exclusion limits derived by different CMS anlayses for the SMS T2qq. Taken from ... (cms susy public results).}
+  \label{fig:T1_comp}
+\end{figure}
+
+\begin{figure}[!tp]
+  \centering
+  \begin{tabular}{c}
+    \includegraphics[width=0.9\textwidth]{figures/T1tttt_ICHEP2014_All.png}
+  \end{tabular}
+  \caption{Comparison of various exclusion limits derived by different CMS anlayses for the SMS T1tttt. Taken from ... (cms susy public results).}
+  \label{fig:T1_comp}
+\end{figure}
+
 
