--- a/Conclusions.tex
+++ b/Conclusions.tex
@@ -1,6 +1,7 @@
-\begin{itemize}
-\item jet resolution has been measured in data and simulation for derivation of data-to-simulation ratio, obtained numbers are ...
-\item it has been searched for susy at sqrt(s) 8 tev, QCD background could be well estimated with typical precision of ... after adjusting the existing method to be able to also predict number of jets correctly
-\item natural susy: requires light stops, limits already quite high. Light means lighter than approx. 1 TeV. close this gap by search involving techniques for identification of boosted tops
-\item everything will be interesting at 13 tev...tada
-\end{itemize}
+Supersymmetry is among the favoured extensions of the standard model of particle physics and one of the main target of searches for new physics within the CMS experiment. Since especially coloured SUSY particles are expected at a high rate at the LHC which predominantly manifest in final states containing jets and missing transverse momentum, it is promising to perform searches based on such signatures which require in addition a good understanding of jet properties. \\
+In this thesis, a measurement of the jet transverse momentum resolution in dijet events corresponding to data with an integrated luminosity of 19.8~\fbinv recorded at $\sqrt{s}=8$~\tev in 2012 by the CMS experiment has been presented. A similar approach to previous analyses was used, but the precision of the measurement could be significantly improved. This was achieved by a correct treatment of statistical uncertainties by considering correlations among inclusive distributions which subsequently also allowed a revised treatment of systematic uncertainties which have been conservatively overestimated in the past. Furthermore, the method has been extended to be able to measure the resolution in the forward part of the detector with higher precision. For $|\eta| = 0.0$ -- $5.0$ the data-to-simulation ratio of the resolution has been measured. Since no significant trend as function of \ptave was apparent, the ratio is determined as function of $|\eta|$ only. The ratios obtained for the various $|\eta|$ regions increase from $1.079\pm \, 0.026$ in the central region up to $1.395\pm \, 0.063$ at $|\eta| = 2.8 - 3.2$ and drop again for the outermost region $|\eta| = 3.2 - 5.0$ down to $1.056\pm \, 0.191$. These values can be utilized to adjust the resolution in simulation to match the one observed in data.\\
+In the second part of this thesis, a search for supersymmetry in events with $N_\mathrm{Jets} = 3-5, 6-7, \ge 8$ and large missing momentum in proton-proton collsions at $\sqrt{s}=8$~\tev in data corresponding to an integrated luminosity of 19.5~\fbinv has been presented. Special emphasis is put on the determination of the QCD multijet background which relies strongly on the precise knowledge of the jet response. These QCD background contributions are estimated directly from multijet events in data by modelling momentum mismeasurements based on the jet response. A similar approach has been used already in earlier versions of this analysis where the search has been performed inclusive in the jet multiplicity requiring at least three jets. With the extension of the analysis to multijet events, an adjustment of the method to predict QCD multijet background contributions became inevitable. A dedicated correction to the existing method has been introduced in order to predict the jet multiplicity correctly. Moreover the assignment of systematic uncertainties has been revised in order to consider e.g. the challenging conditions due to pile-up appropriately. In total, the QCD multijet background could be estimated with a precision of approximately $70-80 \%$ in search regions with non-negligible QCD background contributions. The observed number of events in data are consistent with the expected number of events from standard model processes such that exclusion limits are derived for various simplified supersymmetric models. In the context of this simplified models the production of squarks below 780~\gev and that of gluinos up to $1.1-1.2$~\tev can be excluded at $95\%$ CL for LSP masses not exceeding 100~\gev. \\
+In addition to inclusive searches targeting gluinos and squarks, CMS has also peformed searches for direct production of top squarks with data obtained at $\sqrt{s}=8$~\tev. With this data direct poduction of top squarksdecaying into top and LSP could be excluded up to top squarks masses of approximately 750~\gev for LSP masses below 100~\gev. In order to extend the mass reach of such searches to even higher top squark masses in the next run period of the LHC which will start in 2015 with a center of mass energy of 13~\tev suitable selection criteria for such analyses have been investigated in the third part of this thesis. Studies presented here are based on events with several jets, large momentum imbalance and no leptons. One key aspect is the application of dedicated algorithms for the identification of decay products emerging from boosted top decays in order to separate possible SUSY signal events from standard model background. Various different discriminating variables have been investigated. Moreover the sensitivity of several selections -- also that one of the all-hadronic stop search performed at $\sqrt{s}=8$~\tev -- has been compared by deriving the expected exclusion reach for data corresponding to 19.5~\fbinv at $\sqrt{s}=13$~\tev. Selection criteria could be identified extending the mass reach of direct stop searches up to roughly 1~\tev for LSP masses below 100~\gev. 
+\todo{Summary in den Kontext "Natural SUSY" einbetten}
+
+
