--- a/Thesis.bib
+++ b/Thesis.bib
@@ -12,6 +12,21 @@
      url       = {http://pdg.lbl.gov}
 }
 
+@article{bib:PDG:2012,
+  author = {J. Beringer et al. (Particle Data Group))},
+  title = {Review of Particle Physics},
+  journal = {Phys. Rev. D},
+  volume = {86},
+  issue = {1},
+  pages = {010001},
+  numpages = {1528},
+  year = {2012},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.86.010001},
+  url = {http://link.aps.org/doi/10.1103/PhysRevD.86.010001}
+}
+
 @Inbook{bib:Stoerig:Philosophie,
   Author    = {Hans Joachim St{\"o}rig},
   Title     = {Kleine Weltgeschichte der Philosophie},
