--- a/Theory.tex
+++ b/Theory.tex
@@ -1,8 +1,42 @@
+The standard model of particle physics (SM) describes the fundamental particles and interactions between them. It is a theory that successfully predicted the existence of several at that time undiscovered particles like e.g. the W boson \todo{Quellen: Teilchen Entdeckungen}, the top quark or the $\tau$ neutrino. In addition, it has been tested extensively in electroweak precision measurements at LEP. \\
+Although the SM shows so far a remarkably successful performance there are also some open questions which can not be answered within the SM. Thus several theories have been developed to address problems which go beyond the SM. One of such well-motivated extensions is supersymmetry (SUSY) for which however no experimental evidence has been found so far. \\
+After a short introduction to the phenomenology of the standard model including a discussion of its' shortcomings, the basic concepts of supersymmetry are introduced in this chapter. In addition, general concepts of searches for supersymmetry at collider experiments are discussed together with a summary of the current status of the results of such searches which have been performed in the past.
 \section{The Standard Model of Particle Physics}
 \label{sec:sm}
+The description of the SM comprises the elementary particles and their interactions~\cite{bib:PDG:2012}. In general, one distinguishes between two types of particles: fermions and bosons. While matter particles are fermions with half-integer spin, the fundamental forces are mediated via bosons carrying integer spin. An overview of the contents of the SM is given in Fig. ... where the particles are denoted together with their interactions indicated by the coloured lines \footnote{Gravity is not included in the current representation of the standard model and thus it is not discussed in this thesis.}.\\
+A brief description of the properties of the particles contained in the SM and the corresponding interactions is given in the following:
+\begin{description}
+
+\item \textbf{Matter Constituents:}
+ \begin{description}
+  \item \textit{Leptons:}
+  \item \textit{Quarks:}
+ \end{description}
+
+\item \textbf{Fundamental Forces:}
+ \begin{description}
+  \item \textit{Electromagnetic Force:}
+  \item \textit{Weak Force:}
+  \item \textit{Strong Force:}
+ \end{description}
+\item \textbf{Higgs Boson:}
+
+\end{description}
+
+Mathematically the standard model is a quantum field theory where interactions between particles are described via gauge symmetries. The underlying gauge group of the standard model is 
+\begin{equation*}
+SU(3)_{C} \otimes SU(2)_{L} \otimes U(1)_{Y}
+\end{equation*}
+where $SU(3)$ is the gauge group of the strong force and $C$ indicates that this force acts on the colour charge, $SU(2)$ represents the weak force and $L$ denotes that this force only acts on left-handed fermions, while $U(1)$ represents the electroweak force acting on the electroweak hypercharge $Y$.
 
 \subsection{Limitations of the Standard Model}
 \label{subsec:sm_shortcomings}
+
+\begin{description}
+\item \textbf{Unification of couplings:}
+\item \textbf{Origin of dark matter:}
+\item \textbf{Hierarchy problem:}
+\end{description}
 
 \section{Supersymmetry}
 \label{sec:susy}
