--- a/Objects.tex
+++ b/Objects.tex
@@ -13,6 +13,9 @@
 \subsection{Jet Energy Calibration}
 \label{subsec:jets_calib}
 
+\section{Identification of B-Hadron Decays}
+\label{sec:btagging}
+
 \section{Identification of Boosted Top Quark Decays}
 \label{sec:boosted_tops}
 
@@ -21,3 +24,9 @@
 
 \subsection{The HEP Top Tagger}
 \label{sec:boosted_tops_hep_top_tagger}
+
+\subsection{Subjet B-Tagging}
+\label{sec:boosted_tops_subjet_b}
+
+\subsection{N-subjettiness}
+\label{sec:boosted_tops_n_subjettiness}
