--- a/Theory.tex
+++ b/Theory.tex
@@ -16,15 +16,18 @@ A brief description of the properties of the particles contained in the SM and t
 In the SM, one distinguishes between twelve different fermions being the elementary constituents of matter. For each fermion there exists also an antiparticle which carries the opposite signed quantum numbers.
  \begin{description}
   \item \textit{Leptons:} The SM contains in total six leptons which are three negatively charged leptons (\lel, \lmu, \ltau) and three neutral leptons (\nue, \numu, \nutau), the neutrinos. In addition to the charge, leptons are also distinguished according to the lepton numbers which are electron number $L_{\lel} = 1$ for electron and electron-neutrino, muon number $L_{\lmu} = 1$ for muon and muon-neutrino and tauon number $L_{\ltau} = 1$ for tauon and tauon-neutrino. Each pair of lepton and neutrino carrying the same lepton number is forming a so-called \textit{generation} where \lel and \nue belong to the first generation, \lmu and \numu to the second and \ltau and \nutau to the third, respectively.
-  \item \textit{Quarks:} The remaining six fermions in the SM are quarks and can be grouped into generations analogous to the leptons. The first generation is populated by up- and down-quark (\qu, \qd), the second by charm- and strange-quark (\qc, \qs) and the third by the top- and bottom-quark (\qt, \qb). All quarks carry electrical charge but different than for leptons it is not integer but $+2/3$ for the up-type quarks (\qu, \qc, \qt) and $-1/3$ for down-type quarks (\qd, \qs, \qb). In addition to the electrical charge, quarks also carry color charge which comes in three types.
+  \item \textit{Quarks:} The remaining six fermions in the SM are quarks and can be grouped into generations analogous to the leptons. The first generation is populated by up- and down-quark (\qu, \qd), the second by charm- and strange-quark (\qc, \qs) and the third by the top- and bottom-quark (\qt, \qb). All quarks carry electrical charge but different than for leptons it is not integer but $+2/3$ for the up-type quarks (\qu, \qc, \qt) and $-1/3$ for down-type quarks (\qd, \qs, \qb). Besides to the electrical charge, quarks also carry color charge which comes in three types.
  \end{description}
 In addition to the attributes described above, fermions are furthermore characterized by the weak isospin. Left-handed fermions in each generation form an isodoublet with a weak isospin of $\pm 1/2$ while right-handed components are isosinglets with a weak isospin of 0. 
 \item \textbf{Fundamental Forces:}
-Matter particles interact with each other through fundamental forces mediated via gauge bosons. These bosons arise from the principle of gauge invariance under local symmetry transformations. 
+Matter particles interact with each other through fundamental forces mediated via gauge bosons. These bosons arise from the principle of local gauge invariance under symmetry transformations. 
  \begin{description}
-  \item \textit{Strong Force:}
-  \item \textit{Electroweak Force:}
+  \item \textit{Electromagnetic Force:} The description of the electromagnetic force is based on the theory of \textit{Quantum Electrodynamics} (QED). It is communicated between electrically charged particles, like the charged leptons and quarks, by the exchange of massless photons which are themselves electrically neutral. The electromagnetic force is long ranged due to the specific properties of the photon. 
+  \item \textit{Weak Force:} 
+  \item \textit{Strong Force:} The theoretical framework describing the strong force is called Quantum Chromo Dynamics (QCD) \todo{Quelle}. It is mediated via eight massless gluons and acts on the colour charge which is carried for instance by quarks. In contrast to the photon which is electrically neutral and thus can not interact with itself, gluons carry a colour charge and hence are able to couple to themself. The colour charge exists in three different states commonly referred to as 'red', 'green' and 'blue'. Quarks and gluons are collectively referred to as partons. \\
+Regarding the dependence on the distance the strong force behaves differently than other fundamental forces: the coupling strength increases with rising distance. This is a consequence of the different colour states and the self-coupling property of gluons. It is usually referred to as \textit{confinement} and causes the effect that coloured objects can not exist freely. In fact when separated, coloured objects start to build new coloured particles until only a colour neutral formation is left. Such colourless objects linked by the strong force are named hadrons. On the other particles taking part in the strong interaction start to behave quasi-free when they are brought close together. This feature is known as \textit{asymptotic freedom}.   
  \end{description}
+
 \item \textbf{Higgs Boson:} The electroweak theory in the current representation requires that fermions and bosons are massless particles as mass terms violate the gauge invariance under $SU(2)_{L} \otimes U(1)_{Y}$ transformations. This is in contradiction to experimental observations which have shown that all particles, except for photon and gluon, in fact have mass. \\
 An explanation for the generation of particle masses without violation of the principles of the electroweak theory is provided by the \textit{Higgs-mechanism} \todo{Quellen} which is based on the concept of spontaneous symmetry breaking. The main idea behind this meachnism is that in general the principle of local gauge invariance is obeyed, but that it is explicitly broken by the ground state. In the context of the Higgs-mechanism this is realized by the introduction of the Higgs field described by a potential with a non-zero minimum value. This non-vanishing minimum represents the expectation value of the quantum field in the vacuum -- the vacuum expectation value. The masses of particles are eventually generated by the couplings to the Higgs field. \\
 Furthermore, the Higgs-mechanism also predicts the existence of a new heavy boson, the Higgs boson, which is a quantum excitation of one of the components of the Higgs field. It is supposed to be a scalar and the Higgs mass one of the free parameters of the SM. \\
