--- a/Theory.tex
+++ b/Theory.tex
@@ -22,12 +22,13 @@ In addition to the attributes described above, fermions are furthermore characte
 \item \textbf{Fundamental Forces:}
 Matter particles interact with each other through fundamental forces mediated via gauge bosons. These bosons arise from the principle of local gauge invariance under symmetry transformations. 
  \begin{description}
-  \item \textit{Electromagnetic Force:} The description of the electromagnetic force is based on the theory of \textit{Quantum Electrodynamics} (QED). It is communicated between electrically charged particles, like the charged leptons and quarks, by the exchange of massless photons which are themselves electrically neutral. The electromagnetic force is long ranged due to the specific properties of the photon. 
-  \item \textit{Weak Force:} 
-  \item \textit{Strong Force:} The theoretical framework describing the strong force is called Quantum Chromo Dynamics (QCD) \todo{Quelle}. It is mediated via eight massless gluons and acts on the colour charge which is carried for instance by quarks. In contrast to the photon which is electrically neutral and thus can not interact with itself, gluons carry a colour charge and hence are able to couple to themself. The colour charge exists in three different states commonly referred to as 'red', 'green' and 'blue'. Quarks and gluons are collectively referred to as partons. \\
-Regarding the dependence on the distance the strong force behaves differently than other fundamental forces: the coupling strength increases with rising distance. This is a consequence of the different colour states and the self-coupling property of gluons. It is usually referred to as \textit{confinement} and causes the effect that coloured objects can not exist freely. In fact when separated, coloured objects start to build new coloured particles until only a colour neutral formation is left. Such colourless objects linked by the strong force are named hadrons. On the other particles taking part in the strong interaction start to behave quasi-free when they are brought close together. This feature is known as \textit{asymptotic freedom}.   
+  \item \textit{Electromagnetic Force:} The description of the electromagnetic force is based on the theory of \textit{Quantum Electrodynamics} (QED). It is communicated between electrically charged particles, like the charged leptons and quarks, by the exchange of photons. These are massless and electrically neutral resulting in the property that the electromagnetic force is long ranged.
+  \item \textit{Weak Force:} The weak force acts on the weak charge which is carried by all fermions in the SM. It is mediated by three vector bosons -- namely the two charged \Wpm bosons and the neutral \Z boson. These bosons are unlike the photon massive with masses of $\Wpm = 80.385 \pm 0.015$\gev and $\Z = 91.1876 \pm 0.0021$\gev~\cite{bib:PDG:2012}. As a result the weak interaction is suppressed with respect to the electromagnetic force. \\
+Weak interactions preferably take place within one generation, e.g. \lel or \lmu transform into the respective neutrinos when emitting a \Wm. However, since the mass eigenstates in the weak interaction differ from the flavour eigenstates, \Wpm bosons can also couple to fermions between different generations. In the quark-sector typically a representation is chosen where the up-type flavour eigenstates correspond to the mass eigenstates and the down-type quarks mix. This mixing is described by the CKM-matrix \todo{Quelle}. This is an unitary matrix, described by three mixing angles and one CP-violating phase, which indicates the relative strength between individual transitions. 
+  \item \textit{Strong Force:} The theoretical framework describing the strong force is called Quantum Chromodynamics (QCD) \todo{Quelle}. It is mediated via eight massless gluons and acts on the colour charge which is carried for instance by quarks. In contrast to the photon which is electrically neutral and thus can not interact with itself, gluons carry a colour charge and hence are able to couple to themself. The colour charge exists in three different states commonly denoted as 'red', 'green' and 'blue'. Quarks and gluons are collectively referred to as partons. \\
+Regarding the dependence on the distance the strong force behaves differently than other fundamental forces: the coupling strength increases with rising distance. This is a consequence of the different colour states and the self-coupling property of gluons. It is usually referred to as \textit{confinement} and causes the effect that coloured objects can not exist freely. In fact when separated, coloured objects start to build new coloured particles until only a colour neutral formation is left. Such colourless objects linked by the strong force are named hadrons. On the other hand, particles taking part in the strong interaction start to behave quasi-free when they are brought close together. This feature is known as \textit{asymptotic freedom}.   
  \end{description}
-
+Something about unification ...
 \item \textbf{Higgs Boson:} The electroweak theory in the current representation requires that fermions and bosons are massless particles as mass terms violate the gauge invariance under $SU(2)_{L} \otimes U(1)_{Y}$ transformations. This is in contradiction to experimental observations which have shown that all particles, except for photon and gluon, in fact have mass. \\
 An explanation for the generation of particle masses without violation of the principles of the electroweak theory is provided by the \textit{Higgs-mechanism} \todo{Quellen} which is based on the concept of spontaneous symmetry breaking. The main idea behind this meachnism is that in general the principle of local gauge invariance is obeyed, but that it is explicitly broken by the ground state. In the context of the Higgs-mechanism this is realized by the introduction of the Higgs field described by a potential with a non-zero minimum value. This non-vanishing minimum represents the expectation value of the quantum field in the vacuum -- the vacuum expectation value. The masses of particles are eventually generated by the couplings to the Higgs field. \\
 Furthermore, the Higgs-mechanism also predicts the existence of a new heavy boson, the Higgs boson, which is a quantum excitation of one of the components of the Higgs field. It is supposed to be a scalar and the Higgs mass one of the free parameters of the SM. \\
