--- a/Theory.tex
+++ b/Theory.tex
@@ -3,7 +3,15 @@ Although the SM shows so far a remarkably successful performance there are also 
 After a short introduction to the phenomenology of the standard model including a discussion of specific shortcomings~\cite{bib:PDG:2012}, the basic concepts of supersymmetry are introduced in this chapter \todo{Ref?}. In addition, general concepts of searches for supersymmetry at collider experiments are discussed together with a summary of the current status of the results of such searches which have been performed in the past.
 \section{The Standard Model of Particle Physics}
 \label{sec:sm}
-The description of the SM comprises the elementary particles and their interactions. In general, one distinguishes between two types of particles: fermions and bosons. While matter particles are fermions with half-integer spin, the fundamental forces are mediated via bosons carrying integer spin. An overview of the contents of the SM is given in Fig. ... where the particles are denoted together with their interactions indicated by the coloured lines \footnote{Gravity is not included in the current representation of the standard model and thus it is not discussed in this thesis.}. \\
+The description of the SM comprises the elementary particles and their interactions. In general, one distinguishes between two types of particles: fermions and bosons. While matter particles are fermions with half-integer spin, the fundamental forces are mediated via bosons carrying integer spin. An overview of the contents of the SM is given in Fig.~\ref{fig:SM} where the particles are denoted together with their interactions \footnote{Gravity is not included in the current representation of the standard model and thus it is not discussed in this thesis.}. \\
+\begin{figure}[!tp]
+  \centering
+  \begin{tabular}{c}
+    \includegraphics[width=0.9\textwidth]{figures/SM.jpg}
+  \end{tabular}
+  \caption{Overview of particles contained in the standard model. Blue lines indicate interactions between different particles.}
+  \label{fig:SM}
+\end{figure}
 Mathematically the standard model is a quantum field theory where interactions between particles are described via gauge symmetries. The underlying gauge group of the standard model is 
 \begin{equation*}
 SU(3)_{C} \otimes SU(2)_{L} \otimes U(1)_{Y}
